# FR.IA-keywords

./: AGENTS.md  ROADMAP.md  __init__.py  keywords.db
FRIA_ComfyUI/: README.md  __init__.py  pyproject.toml  server.py
FRIA_ComfyUI/nodes/: _credentials.py  elements_node.py  enhance_node.py  ideogram4_node.py  ideogram4_preview_node.py  ideogram_parse_node.py  ideogram_prep_node.py  prep_node.py
FRIA_ComfyUI/web/js/: fria_elements_widget.js  fria_menu.js
backend/: app.py  auth.py  context.py  embeddings.py  parser.py  requirements.txt
backend/routes/: enhance.py  helpers.py  ideogram.py  styles.py  templates.py
frontend/: beta.html  index.html
frontend/js/: app-admin.js  app-core.js  app-filters.js  app-keywords.js
web/js/: fria_elements_widget.js  fria_enhance_widget.js  fria_ideogram4_preview_widget.js  fria_ideogram4_widget.js  fria_ideogram_parse_widget.js  fria_ideogram_prep_widget.js  fria_menu.js  fria_prep_widget.js  fria_terminal_widget.js
